; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/pch_gbe/extr_pch_gbe_main.c_pch_gbe_setup_tctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/pch_gbe/extr_pch_gbe_main.c_pch_gbe_setup_tctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pch_gbe_adapter = type { %struct.pch_gbe_hw }
%struct.pch_gbe_hw = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@PCH_GBE_TM_LONG_PKT = common dso_local global i32 0, align 4
@PCH_GBE_TM_ST_AND_FD = common dso_local global i32 0, align 4
@PCH_GBE_TM_SHORT_PKT = common dso_local global i32 0, align 4
@PCH_GBE_TM_TH_TX_STRT_8 = common dso_local global i32 0, align 4
@PCH_GBE_TM_TH_ALM_EMP_4 = common dso_local global i32 0, align 4
@PCH_GBE_TM_TH_ALM_FULL_8 = common dso_local global i32 0, align 4
@PCH_GBE_TX_TCPIPACC_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pch_gbe_adapter*)* @pch_gbe_setup_tctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_gbe_setup_tctl(%struct.pch_gbe_adapter* %0) #0 {
  %2 = alloca %struct.pch_gbe_adapter*, align 8
  %3 = alloca %struct.pch_gbe_hw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.pch_gbe_adapter* %0, %struct.pch_gbe_adapter** %2, align 8
  %6 = load %struct.pch_gbe_adapter*, %struct.pch_gbe_adapter** %2, align 8
  %7 = getelementptr inbounds %struct.pch_gbe_adapter, %struct.pch_gbe_adapter* %6, i32 0, i32 0
  store %struct.pch_gbe_hw* %7, %struct.pch_gbe_hw** %3, align 8
  %8 = load i32, i32* @PCH_GBE_TM_LONG_PKT, align 4
  %9 = load i32, i32* @PCH_GBE_TM_ST_AND_FD, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @PCH_GBE_TM_SHORT_PKT, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @PCH_GBE_TM_TH_TX_STRT_8, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @PCH_GBE_TM_TH_ALM_EMP_4, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @PCH_GBE_TM_TH_ALM_FULL_8, align 4
  %18 = or i32 %16, %17
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %3, align 8
  %21 = getelementptr inbounds %struct.pch_gbe_hw, %struct.pch_gbe_hw* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = call i32 @iowrite32(i32 %19, i32* %23)
  %25 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %3, align 8
  %26 = getelementptr inbounds %struct.pch_gbe_hw, %struct.pch_gbe_hw* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = call i32 @ioread32(i32* %28)
  store i32 %29, i32* %5, align 4
  %30 = load i32, i32* @PCH_GBE_TX_TCPIPACC_EN, align 4
  %31 = load i32, i32* %5, align 4
  %32 = or i32 %31, %30
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  %34 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %3, align 8
  %35 = getelementptr inbounds %struct.pch_gbe_hw, %struct.pch_gbe_hw* %34, i32 0, i32 0
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = call i32 @iowrite32(i32 %33, i32* %37)
  ret void
}

declare dso_local i32 @iowrite32(i32, i32*) #1

declare dso_local i32 @ioread32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
